python-web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app-deployment
  labels:
    app: python-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
      - name: web-app
        image: raghumn/k8s-notes-python-web-app
        ports:
        - containerPort: 8000
