python-web-app/path_based_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: pythonapp.com
     http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: python-web-app-service
            port:
              number: 80
